--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  width: 100%;
+  height: auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-flow: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.table {
+  width: 100%;
+  max-width: 780px;
+  align-items: center;
+  align-self: center;
+}
+.parag{
+width: 100%;
+height: 100px;
+max-width: 780px;
+align-self: center;
+}
+.buttons{
+    width: 100%;
+    max-width: 780px;
+    height: 100px;
+    align-self: center;
+}
+
+th{
+    font-size: 20px;
+    text-align: start;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.281);
+}
+td{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 16px;
+    width:100px;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.397);
+}
+.edit {
+  width: 50px;
+  height: 40px;
+  background-color: rgba(0, 0, 255, 0.5);
   color: white;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.delete {
+  width: 90px;
+  height: 40px;
+  background-color: red;
+  color: white;
+  cursor: pointer;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-control{
+  width: 100%;
+  max-width: 500px;
+  height:40px;
+}
+.btn{
+  align-items: center;
+  align-self: center;
+  border:1px solid transparent;
+  color:black;
+  font-weight: 600;
+  background-color: rgb(137, 178, 226);
 }
